<resources>
    <string name="app_name">persistent-ui-state</string>
    <string name="start_message">Start the Game!</string>
    <string name="red_robot_message">Red Robot\'s Turn</string>
    <string name="white_robot_message">White Robot\'s Turn</string>
    <string name="yellow_robot_message">Yellow Robot\'s Turn</string>
    <string name="purchase_button">Make Purchase</string>
    <string name="reward_a">Reward A</string>
    <string name="reward_b">Reward B</string>
    <string name="reward_c">Reward C</string>
    <string name="reward_d">Reward D</string>
    <string name="reward_e">Reward E</string>
    <string name="reward_f">Reward F</string>
    <string name="reward_g">Reward G</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="insufficient_energy">Insufficient Energy!</string>
    <string name="purchased">Purchased!</string>
    <string name="red_robot_purchase">Red Robot Purchased</string>
    <string name="white_robot_purchase">White Robot Purchased</string>
    <string name="yellow_robot_purchase">Yellow Robot Purchased</string>
</resources>
